<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_500"
        tools:context=".CreateNoteActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_40sdp"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/_10sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <ImageView
                    android:id="@+id/imageBack"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:src="@drawable/ic_arrow_left"
                    android:contentDescription="@string/app_name"
                    app:tint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageSave"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:src="@drawable/ic_done"
                    android:background="@drawable/bg_done_button"
                    android:contentDescription="@string/app_name"
                    app:tint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/imageBack"
                    app:layout_constraintTop_toTopOf="@id/imageBack" />


                <EditText
                    android:id="@+id/inputNoteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_bold"
                    android:hint="@string/note_title"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/_16sdp"
                    app:layout_constraintTop_toBottomOf="@id/imageBack" />

                <TextView
                    android:id="@+id/textDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_10sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorTextHint"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
                    app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                    app:layout_constraintTop_toBottomOf="@id/inputNoteTitle" />

                <EditText
                    android:id="@+id/inputNoteSubtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_medium"
                    android:hint="@string/note_subtitle"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:textColor="@color/colorTextHint"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/viewSubtitleIndicator"
                    app:layout_constraintTop_toBottomOf="@id/textDateTime" />

                <View
                    android:id="@+id/viewSubtitleIndicator"
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:background="@drawable/bg_subtitle_indicator"
                    app:layout_constraintBottom_toBottomOf="@id/inputNoteSubtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/inputNoteSubtitle" />


                <EditText
                    android:id="@+id/inputNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:gravity="top"
                    android:hint="@string/type_note_here"
                    android:minHeight="@dimen/_100sdp"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:textColor="@color/colorTextHint"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputNoteSubtitle" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>