<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.NoteFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true"
            android:id="@+id/app_bar_layout">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/app_title"
                        android:fontFamily="@font/google_sans_bold"
                        android:text="My Notes"
                        android:textSize="@dimen/_30ssp"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginStart="@dimen/_2sdp"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/app_title"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp">

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_50sdp"
                            android:id="@+id/search"
                            android:background="@drawable/rounded_search"
                            android:drawableStart="@drawable/ic_round_search_24"
                            android:padding="@dimen/_5sdp"
                            android:imeOptions="actionSearch"
                            android:hint="@string/search_here"
                            android:paddingStart="@dimen/_18sdp"
                            android:paddingEnd="@dimen/_18sdp"
                            android:paddingTop="@dimen/_4sdp"
                            android:paddingBottom="@dimen/_5sdp"
                            android:textSize="@dimen/_16ssp"
                            android:importantForAutofill="no"
                            android:inputType="textFilter"
                            android:layout_weight="3"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rvNote"
            android:paddingStart="@dimen/_6sdp"
            android:paddingEnd="@dimen/_6sdp"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:paddingBottom="@dimen/_5sdp"
            android:transitionGroup="true"
            tools:listitem="@layout/note_item"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/noData"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:src="@drawable/ic_no_data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:id="@+id/addNoteFab"
            android:focusable="true"
            android:clickable="true"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:background="@drawable/fab_btn_corner"
            android:backgroundTint="@color/black"
            android:layout_margin="@dimen/_16sdp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/innerFab"
                android:src="@drawable/ic_round_add_24"
                android:backgroundTint="@color/black"
                android:elevation="0dp"
                app:tint="@color/white"
                app:fabSize="normal"
                app:borderWidth="0dp"
                app:useCompatPadding="false"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fabText"
                android:fontFamily="@font/google_sans_regular"
                android:text="@string/add_note"
                android:textColor="@color/white"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"/>

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>